# chapter-splitter-sigil

./: .gitignore  README.md  config.toml  package_sigil_plugin.py  pyproject.toml
chapter_splitter/: __init__.py
chapter_splitter/application/: service.py
chapter_splitter/domain/: chapter_split_engine.py  document_loader.py  models.py  name_generator.py  paragraph_renderer.py  preset_catalog.py  rule_analyzer.py  sequence_validator.py  template_injector.py
chapter_splitter/infrastructure/: configuration.py  default_config.toml
chapter_splitter/resources/: __init__.py  icons.rcc
chapter_splitter/ui/: app.py  common.py  dialogs.py  i18n.py  main_window.py  main_window_icons.py  main_window_layout.py  main_window_texts.py  presenter.py  preview_model.py  view.py  widgets.py  workers.py
sigil_plugin/: plugin.py  plugin.xml  sigil_adapter.py
tests/: test_name_generator.py  test_sequence_validator.py  test_service_flow.py  test_template_and_rules.py
