[project]
name = "chapter-splitter"
version = "1.0.0"
description = "SplitChapter desktop and CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chapter_splitter"]
